# castle

./: Cargo.toml  README.md  next.txt  out.txt  test.html
builder/: Cargo.toml  notes.html  plugin.json  test.lua  working.html
builder/src/: main.rs
examples/: README.md  build.py  notes.html  test.lua  working.html
src/: lib.rs  main.rs
tamper/: IITC Plugin: Easy Ingress Scanner Button.user.js  IITC Plugin: Player tracker.user.js  IITC plugin: Arc.user.js  IITC plugin: Bookmarks for maps and portals.user.js  IITC plugin: Cache viewed portal details and always show them on the map.user.js  IITC plugin: Fly Links.user.js  IITC plugin: Hide Chat.user.js  IITC plugin: Keys on map.user.js  IITC plugin: Keys.user.js  IITC plugin: Maps Route Planner.user.js  IITC plugin: Max Links.user.js  IITC plugin: Portal Level Numbers.user.js  IITC plugin: Self location.user.js  IITC plugin: Show farms by level.user.js  IITC plugin: Side tools selector..user.js  IITC plugin: draw tools.user.js  IITC plugin: guess player level.user.js  IITC plugin: highlight portals by level color.user.js  IITC plugin: hightlight portals that need recharging.user.js  IITC plugin: layer count.user.js  IITC plugin: pan control.user.js  IITC plugin: scale bar.user.js  IITC plugin: show list of portals.user.js  IITC plugin: zoom slider.user.js
