[package]
name = "castle"
version = "0.1.0"
authors = ["Himehowareu <himehowareu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
lua-src = "546.0.2"
luajit-src = "210.5.8"
serde_json = "1.0.117"
shell-words = "1.1.0"

mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
tera = "1.19.1"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
fancy-regex = "0.13.0"


