[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
lua-src = "546.0.2"
luajit-src = "210.5.8"
regex = "1.10.4"
serde_json = "1.0.117"
shell-words = "1.1.0"

mlua = { version = "0.9.7", features = ["lua54", "vendored"] }


